# django-ninja-tutorial

./: README.md  compose.yaml  pyproject.toml
account/: admin.py  models.py  schemas.py  urls.py
account/migrations/: 0001_initial.py
account/routers/: __init__.py  admin_users.py  auth.py  users.py
account/routers/admin/: users.py
auth/: admin.py  apps.py  models.py  schemas.py  urls.py
auth/migrations/: 0001_initial.py
auth/routers/: __init__.py  admin_users.py  auth.py  users.py
blog/: models.py  router.py  schemas.py
blog/migrations/: 0001_initial.py
config/: cache.py  error_message.py  ninja.py  security.py  settings.py  urls.py
config/common/schemas/: __init__.py  error.py
django_project/: ninja.py  security.py  settings.py  urls.py
scripts/seed_data/: seed_users.py
