[tool.poetry]
name = "hello-ninja"
version = "0.1.0"
description = ""
authors = ["skokado <terutacchi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = ">=4.2,<5.0"
django-ninja = ">=1.0rc0"
uvicorn = "^0.20.0"
pyjwt = "^2.6.0"
gunicorn = "^20.1.0"
pydantic = {extras = ["email"], version = "^2.4.2"}
redis = "^5.0.1"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "config.settings"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
